--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Show Maps!</h1>
-<p>Hopefully I'll figure out how to show a map on this page.</p>
+<p> Sweet, I got embeded maps working!</p>
+<iframe
+  width="600"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/place?key=<%= ENV['MAPS_KEY'] %>
+    &q=Turing+School+Denver+CO" allowfullscreen>
+</iframe>
